# pypackage-bazel-cpp

./: .gitignore  README.md  WORKSPACE  pyproject.toml  setup.py
doc/source/: conf.py  index.rst  setup.rst
src/main/: BUILD  main.cc
src/mypackage/: __init__.py  cpp.py
src/mypackage/_cpp/: BUILD  boostmodule.cc  boostmodule.h  cpp.cc  cpp.h
